fix introduction and spacing

--- a/src/scss/pages/_store.scss
+++ b/src/scss/pages/_store.scss
@@ -1,11 +1,11 @@
-.block-products{
+.block-products {
     width: 1299px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     margin: 150px auto;
 
-    .card-store{
+    .card-store {
         width: calc((100% - 96px)/3);
     }
 
@@ -14,7 +14,7 @@
 .store-product-guide {
     width: 1300px;
     background-color: $yellow;
-    margin: 0px auto;
+    margin: 0px auto 150px auto;
     padding: 121px 230px;
     color: $blue;
 
@@ -29,7 +29,7 @@
             background-color: $blue;
         }
 
-        h1{
+        h1 {
             font-weight: 700;
         }
 
@@ -49,5 +49,5 @@
         }
     }
 
-  
+
 }
